# dq-prof

./: .gitignore  Cargo.toml  Makefile  README.md  baseline.json  baseline_clean.json  pyproject.toml  release.sh
.github/workflows/: pypi.yml  release.yml
examples/: README.md  bad_sales.csv  clean_sales.csv  demo_alerts.csv  download_titanic.sh  download_yellow.sh  drift_sales.csv
python/: README.md  prepare_binary.sh  pyproject.toml
python/dq_prof/: cli.py
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs  types.rs
src/baseline/: compare.rs  mod.rs  model.rs  store.rs
src/io/: csv.rs  mod.rs  parquet.rs  postgres.rs  reader.rs  sampling.rs  sampling.rs (continued)
src/profile/: categorical.rs  column.rs  dataset.rs  datetime.rs  fingerprint.rs  mod.rs  numeric.rs  schema.rs
src/report/: json.rs  mod.rs  summary.rs  terminal.rs
src/rules/: builtins.rs  cardinality.rs  constants.rs  engine.rs  freshness.rs  mod.rs  nulls.rs  outliers.rs  rowcount.rs  schema_change.rs  severity.rs  skew.rs
src/util/: datetime.rs  formatting.rs  mod.rs  stats.rs  thresholds.rs
tests/: basic_rules.rs  json_snapshot.rs  sampling_baseline.rs  terminal_snapshot.rs  test_vs_pandas.py
