[package]
name = "dq-prof"
version = "0.1.8"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
polars = { version = "0.40", default-features = false, features = ["lazy", "csv", "parquet", "dtype-datetime", "dtype-categorical"] }
sha2 = "0.10"
hex = "0.4"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
rand = "0.9"
yansi = "1.0"
hashbrown = { version = "0.14", features = ["raw"] }
