[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "dq-prof"
version = "0.1.19"
description = "Prebuilt dq-prof binary wrapper"
readme = "README.md"
authors = [{name="dq-prof"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
bindings = "bin"
strip = true
include = ["dq_prof/bin/dq-prof"]
