[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "dq-prof"
version = "0.1.5"
description = "Prebuilt dq-prof binary wrapper"
readme = "README.md"
authors = [{name="dq-prof"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
dq-prof = "dq_prof.cli:main"

[tool.setuptools.package-data]
"dq_prof" = ["bin/dq-prof"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dq_prof*"]
